--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="https://wa.me/+56933730744">Contacto</a>
             </li>
             <li class="nav-item">
-                <button><a class="nav-link" href="#">Portafolio</a></button>
+                <button><a class="nav-link" href="Portafolio.html">Portafolio</a></button>
             </li>
           </ul>
     </div>
@@ -84,7 +84,7 @@
                   <a class="nav-link" href="https://wa.me/+56933730744">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <button><a class="nav-link" href="#">Portafolio</a></button>
+                    <button><a class="nav-link" href="Portafolio.html">Portafolio</a></button>
                 </li>
               </ul>
         </div>
